Fix align of list.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,3 @@
-ul.columns {
-  width:900px;
-  float: right;
-}
 .gorilla{
   border: 2px solid gold;
   padding:4px;
@@ -41,8 +37,10 @@ ul.columns {
 }
 
 img {
-  width: 100%;
-  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 .center {
